submitted a 3 xvalid random forest, less than 1% improvement

--- a/Titanic/sol_random_forest.ipynb
+++ b/Titanic/sol_random_forest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 102,
    "metadata": {
     "collapsed": true
    },
@@ -496,7 +496,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 92,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "np.savetxt('titanic_RF_lessnaive.csv',\n",
+    "           np.c_[test_raw['PassengerId'],test_predictions],\n",
+    "           delimiter=',',\n",
+    "           header='PassengerId,Survived',\n",
+    "           fmt='%d',\n",
+    "           comments='')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Slight improvement over logistic regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# More cross validation may help"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
    "metadata": {
     "collapsed": false
    },
@@ -505,46 +535,96 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True False  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True False  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True False  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True False  True  True  True  True False  True\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True False  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True False  True  True\n",
-      " False  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True False  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True  True False\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True  True  True\n",
-      "  True  True  True  True  True  True  True  True  True  True]\n"
+      "1 : 0.167916666667\n",
+      "2 : 0.163833333333\n",
+      "3 : 0.171416666667\n",
+      "4 : 0.168833333333\n",
+      "5 : 0.17275\n",
+      "6 : 0.1715\n",
+      "7 : 0.174166666667\n",
+      "auto : 0.169083333333\n",
+      "log2 : 0.178166666667\n",
+      "sqrt : 0.17425\n"
      ]
     }
    ],
    "source": [
-    "print np.sum(test_predictions != predictions"
+    "feature_range = range(1,len(train_x.columns)+1)+['auto','log2','sqrt']\n",
+    "args = {'max_depth':len(train_x.columns),'n_estimators':best_estimator}\n",
+    "best_feature,feature_errors = cross_validation(train_x,train_y,feature_range,k=50,parameter='max_features',**args)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 105,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "best_feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.18\n"
+     ]
+    }
+   ],
+   "source": [
+    "best_forest = RandomForestClassifier(n_estimators=best_estimator,max_depth=best_depth,max_features=best_feature)\n",
+    "best_forest.fit(X_train,Y_train)\n",
+    "predictions = best_forest.predict(X_valid)\n",
+    "error = np.sum(predictions!=Y_valid,dtype=float)/len(Y_valid)\n",
+    "print error"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "best_forest.fit(train_x,train_y)\n",
+    "test_predictions = best_forest.predict(test_x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "np.savetxt('titanic_RF_xv3.csv',\n",
+    "           np.c_[test_raw['PassengerId'],test_predictions],\n",
+    "           delimiter=',',\n",
+    "           header='PassengerId,Survived',\n",
+    "           fmt='%d',\n",
+    "           comments='')"
    ]
   },
   {
