--- a/Titanic/sol_random_forest.ipynb
+++ b/Titanic/sol_random_forest.ipynb
@@ -629,6 +629,243 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gini : 0.16625\n",
+      "entropy : 0.170333333333\n"
+     ]
+    }
+   ],
+   "source": [
+    "penalty_functions = ['gini','entropy']\n",
+    "args = {'max_depth':best_depth,'n_estimators':best_estimator,'max_features':best_feature}\n",
+    "best_function,function_errors = cross_validation(train_x,train_y,penalty_functions,k=50,parameter='criterion',**args)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#Begin Feature Engineering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Trying single features as predictors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "features = X_train.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pclass : 0.29\n",
+      "Sex : 0.21\n",
+      "Age : 0.45\n",
+      "SibSp : 0.39\n",
+      "Parch : 0.4\n",
+      "Fare : 0.33\n",
+      "Embarked : 0.37\n",
+      "Best Single Feature: Sex\n"
+     ]
+    }
+   ],
+   "source": [
+    "single_feature_error = []\n",
+    "for feat in features:\n",
+    "    single_forest = RandomForestClassifier(n_estimators=best_estimator,criterion=best_function)\n",
+    "    single_forest.fit(X_train[[feat]],Y_train)\n",
+    "    predicts = single_forest.predict(X_valid[[feat]])\n",
+    "    err = np.sum(predicts!=Y_valid,dtype=float)/len(Y_valid)\n",
+    "    single_feature_error.append(err)\n",
+    "    print feat,':',err\n",
+    "best_1 = features[np.argmin(single_feature_error)]\n",
+    "print 'Best Single Feature:',best_1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "features_2 = features.drop(best_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pclass : 0.21\n",
+      "Age : 0.26\n",
+      "SibSp : 0.19\n",
+      "Parch : 0.2\n",
+      "Fare : 0.2\n",
+      "Embarked : 0.21\n",
+      "Best Double Feature: ['Sex', 'SibSp']\n"
+     ]
+    }
+   ],
+   "source": [
+    "double_feature_error = []\n",
+    "for feat in features_2:\n",
+    "    if feat == best_1: continue\n",
+    "    double_forest = RandomForestClassifier(n_estimators=best_estimator,criterion=best_function)\n",
+    "    double_forest.fit(X_train[[best_1,feat]],Y_train)\n",
+    "    predicts = double_forest.predict(X_valid[[best_1,feat]])\n",
+    "    err = np.sum(predicts!=Y_valid,dtype=float)/len(Y_valid)\n",
+    "    double_feature_error.append(err)\n",
+    "    print feat,':',err\n",
+    "best_2 = features_2[np.argmin(double_feature_error)]\n",
+    "print 'Best Double Feature:',[best_1,best_2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "features_3 = features.drop([best_1,best_2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 162,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pclass : 0.18\n",
+      "Age : 0.25\n",
+      "Parch : 0.2\n",
+      "Fare : 0.24\n",
+      "Embarked : 0.19\n",
+      "Best Triple Feature: ['Sex', 'SibSp', 'Pclass']\n"
+     ]
+    }
+   ],
+   "source": [
+    "triple_feature_error = []\n",
+    "for feat in features_3:\n",
+    "    if feat in [best_1,best_2]: continue\n",
+    "    triple_forest = RandomForestClassifier(n_estimators=best_estimator,criterion=best_function)\n",
+    "    triple_forest.fit(X_train[[best_1,best_2,feat]],Y_train)\n",
+    "    predicts = triple_forest.predict(X_valid[[best_1,best_2,feat]])\n",
+    "    err = np.sum(predicts!=Y_valid,dtype=float)/len(Y_valid)\n",
+    "    triple_feature_error.append(err)\n",
+    "    print feat,':',err\n",
+    "best_3 = features_3[np.argmin(triple_feature_error)]\n",
+    "print 'Best Triple Feature:',[best_1,best_2,best_3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
+       "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
+       "            min_samples_leaf=1, min_samples_split=2,\n",
+       "            min_weight_fraction_leaf=0.0, n_estimators=190, n_jobs=1,\n",
+       "            oob_score=False, random_state=None, verbose=0,\n",
+       "            warm_start=False)"
+      ]
+     },
+     "execution_count": 163,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "three_forest = RandomForestClassifier(n_estimators=best_estimator,criterion=best_function)\n",
+    "three_forest.fit(train_x[[best_1,best_2,best_3]],train_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "test_predictions_3 = three_forest.predict(test_x[[best_1,best_2,best_3]])\n",
+    "np.savetxt('titanic_RF_three.csv',\n",
+    "           np.c_[test_raw['PassengerId'],test_predictions_3],\n",
+    "           delimiter=',',\n",
+    "           header='PassengerId,Survived',\n",
+    "           fmt='%d',\n",
+    "           comments='')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 167,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "46\n"
+     ]
+    }
+   ],
+   "source": [
+    "print np.sum(test_predictions_3 != test_predictions)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
