including the prediciton csv files

--- a/Titanic/sol_rbf_svm.ipynb
+++ b/Titanic/sol_rbf_svm.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# RBF will most likely severley overfit, and do a poor job"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
