--- a/Santander/sol_randomforest.ipynb
+++ b/Santander/sol_randomforest.ipynb
@@ -383,18 +383,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 49,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "X_train, X_valid, Y_train, Y_valid = train_test_split(train_x, train_y, test_size=0.15, random_state=0)"
+    "X_train, X_valid, Y_train, Y_valid = train_test_split(train_x, train_y, test_size=0.5, \n",
+    "                                                      random_state=42)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 63,
    "metadata": {
     "collapsed": false
    },
@@ -410,19 +411,30 @@
        "            warm_start=False)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "clf = RandomForestClassifier(n_estimators=500)\n",
-    "clf.fit(X_train,Y_train)"
+    "clf.fit(X_train[['var3','imp_ent_var16_ult1']],Y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 64,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "predictions = clf.predict(X_valid[['var3','imp_ent_var16_ult1']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "metadata": {
     "collapsed": false
    },
@@ -431,17 +443,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error : 0\n"
+      "25\n",
+      "1481\n"
      ]
     }
    ],
    "source": [
-    "predictions = clf.predict(X_valid)\n"
+    "print predictions.sum()\n",
+    "print Y_valid.sum()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 66,
    "metadata": {
     "collapsed": false
    },
@@ -450,13 +464,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error : 0.0445496799088\n"
+      "0.0395685345962\n"
      ]
     }
    ],
    "source": [
     "error = np.sum(predictions != Y_valid,dtype=float)/len(Y_valid)\n",
-    "print 'Error :',error"
+    "print error"
    ]
   },
   {
@@ -802,7 +816,7 @@
     }
    ],
    "source": [
-    "test_raw = pd.read_csvvvdata_sets/s/s/s/ets/test.csv')\n",
+    "test_raw = pd.read_csv('data_sets/test.csv')\n",
     "test_raw.describe()"
    ]
   },
@@ -863,20 +877,86 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 37,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "75818\n"
-     ]
+     "data": {
+      "text/plain": [
+       "var3                                -1523.199277\n",
+       "num_var46_0                             0.000000\n",
+       "ind_var2                                0.000000\n",
+       "num_var41                               0.000000\n",
+       "num_var27                               0.000000\n",
+       "num_var28                               0.000000\n",
+       "num_var28_0                             0.000000\n",
+       "num_var27_0                             0.000000\n",
+       "num_reemb_var33_hace3                   0.000000\n",
+       "ind_var46                               0.000000\n",
+       "ind_var46_0                             0.000000\n",
+       "ind_var41                               0.000000\n",
+       "ind_var27                               0.000000\n",
+       "ind_var28                               0.000000\n",
+       "ind_var28_0                             0.000000\n",
+       "ind_var27_0                             0.000000\n",
+       "num_var46                               0.000000\n",
+       "num_reemb_var13_hace3                   0.000000\n",
+       "ind_var2_0                              0.000000\n",
+       "saldo_var27                             0.000000\n",
+       "imp_trasp_var33_out_hace3               0.000000\n",
+       "imp_trasp_var17_out_hace3               0.000000\n",
+       "num_trasp_var33_out_hace3               0.000000\n",
+       "imp_reemb_var33_hace3                   0.000000\n",
+       "imp_reemb_var13_hace3                   0.000000\n",
+       "saldo_var28                             0.000000\n",
+       "num_var2_ult1                           0.000000\n",
+       "imp_amort_var34_hace3                   0.000000\n",
+       "num_var2_0_ult1                         0.000000\n",
+       "saldo_var2_ult1                         0.000000\n",
+       "                                      ...       \n",
+       "saldo_var42                          7191.725395\n",
+       "saldo_var30                         13679.673658\n",
+       "ID                                  75964.050723\n",
+       "var38                              117235.809430\n",
+       "delta_imp_aport_var33_1y3          131544.330141\n",
+       "delta_num_aport_var33_1y3          131544.330196\n",
+       "delta_imp_reemb_var33_1y3          131544.330426\n",
+       "delta_imp_trasp_var33_out_1y3      131544.330426\n",
+       "delta_num_trasp_var33_out_1y3      131544.330426\n",
+       "delta_num_reemb_var33_1y3          131544.330426\n",
+       "delta_imp_amort_var18_1y3          263088.660852\n",
+       "delta_imp_amort_var34_1y3          263088.660852\n",
+       "delta_imp_trasp_var17_in_1y3       526177.321679\n",
+       "delta_num_trasp_var17_in_1y3       526177.321679\n",
+       "delta_num_trasp_var17_out_1y3      526177.321705\n",
+       "delta_imp_trasp_var17_out_1y3      526177.321705\n",
+       "delta_num_trasp_var33_in_1y3       657721.652052\n",
+       "delta_imp_trasp_var33_in_1y3       657721.652052\n",
+       "delta_num_reemb_var17_1y3         2630886.608511\n",
+       "delta_imp_reemb_var17_1y3         2630886.608511\n",
+       "delta_imp_reemb_var13_1y3         4998684.556196\n",
+       "delta_num_reemb_var13_1y3         4998684.556196\n",
+       "delta_imp_aport_var17_1y3         5130228.886430\n",
+       "delta_num_aport_var17_1y3         5130228.886433\n",
+       "delta_imp_venta_var44_1y3         5524861.877952\n",
+       "delta_num_venta_var44_1y3         5524861.877986\n",
+       "delta_imp_compra_var44_1y3        9208103.129717\n",
+       "delta_num_compra_var44_1y3        9208103.129768\n",
+       "delta_num_aport_var13_1y3        48671402.235690\n",
+       "delta_imp_aport_var13_1y3        48671402.235872\n",
+       "dtype: float64"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "train_x.mean().order()"
+   ]
   },
   {
    "cell_type": "code",
