--- a/Titanic/sol_random_forest.ipynb
+++ b/Titanic/sol_random_forest.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 159,
    "metadata": {
     "collapsed": true
    },
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 160,
    "metadata": {
     "collapsed": true
    },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 161,
    "metadata": {
     "collapsed": false
    },
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 188,
    "metadata": {
     "collapsed": false
    },
@@ -88,9 +88,9 @@
     "    re_prefix = '(.*) .*'\n",
     "    data['ticket_prefix'] = data['Ticket'].apply(lambda x: (re.findall(re_prefix,x)+[np.nan])[0])\n",
     "    re_suffix = '[0-9]{2,}'\n",
-    "    data['ticket_suffix'] = data['Ticket'].apply(lambda x: (re.findall(re_suffix,x)+[np.nan])[0])\n",
+    "    data['ticket_suffix'] = data['Ticket'].apply(lambda x: float((re.findall(re_suffix,x)+[np.nan])[0]))\n",
     "    return data\n",
-    "def preprocess(data):\n",
+    "def preprocess(data,scale=True):\n",
     "    data = preprocess_sex(data)\n",
     "    data = preprocess_cabin(data)\n",
     "    data = preprocess_name(data)\n",
@@ -98,14 +98,17 @@
     "    data = preprocess_same_last_name(data)\n",
     "    data = preprocess_ticket(data)\n",
     "    categorical = ['Embarked','Cabin','Title','ticket_prefix']\n",
+    "\n",
+    "    #categorical = data.select_dtypes(include=['object']).columns\n",
     "    iters = 0\n",
     "    while iters < len(categorical):\n",
     "        data = preprocess_categorical(data,categorical[iters])\n",
     "        iters += 1\n",
     "    data = data.fillna(data.mean())\n",
-    "    ignore = ['Sex','PassengerId','Name','Ticket','Last_Name']\n",
+    "    ignore = ['Sex','PassengerId','Name','Ticket']\n",
     "    data = data.drop(ignore,axis=1)\n",
     "    return data\n",
+    "\n",
     "def preprocess_test(test,train):\n",
     "    test = preprocess(test)\n",
     "    for c_train in train.columns:\n",
@@ -119,215 +122,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 190,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Survived</th>\n",
-       "      <th>Pclass</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>SibSp</th>\n",
-       "      <th>Parch</th>\n",
-       "      <th>Fare</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>Same_Last</th>\n",
-       "      <th>ticket_suffix</th>\n",
-       "      <th>Embarked_S</th>\n",
-       "      <th>...</th>\n",
-       "      <th>ticket_prefix_A/S</th>\n",
-       "      <th>ticket_prefix_SC/AH Basle</th>\n",
-       "      <th>ticket_prefix_A/4</th>\n",
-       "      <th>ticket_prefix_WE/P</th>\n",
-       "      <th>ticket_prefix_S.W./PP</th>\n",
-       "      <th>ticket_prefix_S.O./P.P.</th>\n",
-       "      <th>ticket_prefix_F.C.</th>\n",
-       "      <th>ticket_prefix_SOTON/O2</th>\n",
-       "      <th>ticket_prefix_S.C./PARIS</th>\n",
-       "      <th>ticket_prefix_C.A./SOTON</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>22</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7.2500</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>21171</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>38</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>71.2833</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>17599</td>\n",
-       "      <td>0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1</td>\n",
-       "      <td>3</td>\n",
-       "      <td>26</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>7.9250</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>3101282</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>35</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>53.1000</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>113803</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>35</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>8.0500</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>373450</td>\n",
-       "      <td>1</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 83 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "   Survived  Pclass  Age  SibSp  Parch     Fare  gender  Same_Last  \\\n",
-       "0         0       3   22      1      0   7.2500       1          1   \n",
-       "1         1       1   38      1      0  71.2833       0          0   \n",
-       "2         1       3   26      0      0   7.9250       0          0   \n",
-       "3         1       1   35      1      0  53.1000       0          1   \n",
-       "4         0       3   35      0      0   8.0500       1          1   \n",
-       "\n",
-       "  ticket_suffix  Embarked_S            ...             ticket_prefix_A/S  \\\n",
-       "0         21171           1            ...                             0   \n",
-       "1         17599           0            ...                             0   \n",
-       "2       3101282           1            ...                             0   \n",
-       "3        113803           1            ...                             0   \n",
-       "4        373450           1            ...                             0   \n",
-       "\n",
-       "   ticket_prefix_SC/AH Basle  ticket_prefix_A/4  ticket_prefix_WE/P  \\\n",
-       "0                          0                  0                   0   \n",
-       "1                          0                  0                   0   \n",
-       "2                          0                  0                   0   \n",
-       "3                          0                  0                   0   \n",
-       "4                          0                  0                   0   \n",
-       "\n",
-       "   ticket_prefix_S.W./PP  ticket_prefix_S.O./P.P.  ticket_prefix_F.C.  \\\n",
-       "0                      0                        0                   0   \n",
-       "1                      0                        0                   0   \n",
-       "2                      0                        0                   0   \n",
-       "3                      0                        0                   0   \n",
-       "4                      0                        0                   0   \n",
-       "\n",
-       "   ticket_prefix_SOTON/O2  ticket_prefix_S.C./PARIS  ticket_prefix_C.A./SOTON  \n",
-       "0                       0                         0                         0  \n",
-       "1                       0                         0                         0  \n",
-       "2                       0                         0                         0  \n",
-       "3                       0                         0                         0  \n",
-       "4                       0                         0                         0  \n",
-       "\n",
-       "[5 rows x 83 columns]"
+       "Index([u'Survived', u'Pclass', u'Age', u'SibSp', u'Parch', u'Fare', u'gender',\n",
+       "       u'Last_Name', u'Same_Last', u'ticket_suffix', u'Embarked_S',\n",
+       "       u'Embarked_C', u'Embarked_Q', u'Embarked_nan', u'Cabin_nan', u'Cabin_C',\n",
+       "       u'Cabin_E', u'Cabin_G', u'Cabin_D', u'Cabin_A', u'Cabin_B', u'Cabin_F',\n",
+       "       u'Cabin_T', u'Title_Mr', u'Title_Mrs', u'Title_Miss', u'Title_Master',\n",
+       "       u'Title_Don', u'Title_Rev', u'Title_Dr', u'Title_Mme', u'Title_Ms',\n",
+       "       u'Title_Major', u'Title_Lady', u'Title_Sir', u'Title_Mlle',\n",
+       "       u'Title_Col', u'Title_Capt', u'Title_nan', u'Title_Jonkheer',\n",
+       "       u'ticket_prefix_A/5', u'ticket_prefix_PC', u'ticket_prefix_STON/O2.',\n",
+       "       u'ticket_prefix_nan', u'ticket_prefix_PP', u'ticket_prefix_A/5.',\n",
+       "       u'ticket_prefix_C.A.', u'ticket_prefix_A./5.',\n",
+       "       u'ticket_prefix_SC/Paris', u'ticket_prefix_S.C./A.4.',\n",
+       "       u'ticket_prefix_A/4.', u'ticket_prefix_CA', u'ticket_prefix_S.P.',\n",
+       "       u'ticket_prefix_S.O.C.', u'ticket_prefix_SO/C', u'ticket_prefix_W./C.',\n",
+       "       u'ticket_prefix_SOTON/OQ', u'ticket_prefix_W.E.P.',\n",
+       "       u'ticket_prefix_STON/O 2.', u'ticket_prefix_A4.', u'ticket_prefix_C',\n",
+       "       u'ticket_prefix_SOTON/O.Q.', u'ticket_prefix_SC/PARIS',\n",
+       "       u'ticket_prefix_S.O.P.', u'ticket_prefix_A.5.', u'ticket_prefix_Fa',\n",
+       "       u'ticket_prefix_CA.', u'ticket_prefix_F.C.C.', u'ticket_prefix_W/C',\n",
+       "       u'ticket_prefix_SW/PP', u'ticket_prefix_SCO/W', u'ticket_prefix_P/PP',\n",
+       "       u'ticket_prefix_SC', u'ticket_prefix_SC/AH', u'ticket_prefix_A/S',\n",
+       "       u'ticket_prefix_SC/AH Basle', u'ticket_prefix_A/4',\n",
+       "       u'ticket_prefix_WE/P', u'ticket_prefix_S.W./PP',\n",
+       "       u'ticket_prefix_S.O./P.P.', u'ticket_prefix_F.C.',\n",
+       "       u'ticket_prefix_SOTON/O2', u'ticket_prefix_S.C./PARIS',\n",
+       "       u'ticket_prefix_C.A./SOTON'],\n",
+       "      dtype='object')"
       ]
      },
-     "execution_count": 125,
+     "execution_count": 190,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "foo =preprocess(train_raw)\n",
-    "foo.head()"
+    "foo = preprocess(train_raw)\n",
+    "foo.columns"
    ]
   },
   {
