added a resampling function to fix the class imbalance

--- a/Santander/adaboost.ipynb
+++ b/Santander/adaboost.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -10,6 +10,7 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "from sklearn.neighbors import NearestNeighbors\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.ensemble import AdaBoostClassifier\n",
@@ -48,6 +49,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "class0 = train_x[train_y == 0]\n",
+    "class1 = train_x[train_y == 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {
     "collapsed": true
@@ -59,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 53,
    "metadata": {
     "collapsed": true
    },
@@ -85,16 +98,82 @@
     "            print p,':',error\n",
     "        errors.append(error)\n",
     "    best = p_range[np.argmin(errors)]\n",
-    "    return best,errors"
+    "    return best,errors\n",
+    "\n",
+    "def major_class(train_y):\n",
+    "    n_class0 = np.sum(train_y == 0)\n",
+    "    n_class1 = np.sum(train_y == 1)\n",
+    "    if n_class0 > n_class1:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return 1\n",
+    "def minor_class(train_y):\n",
+    "    n_class0 = np.sum(train_y == 0)\n",
+    "    n_class1 = np.sum(train_y == 1)\n",
+    "    if n_class0 < n_class1:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        return 1\n",
+    "    \n",
+    "def class_diff(train_y):\n",
+    "    n_class0 = np.sum(train_y == 0)\n",
+    "    n_class1 = np.sum(train_y == 1)\n",
+    "    min_class = minor_class(train_y)\n",
+    "    if min_class:\n",
+    "        class_diff = n_class0 - n_class1\n",
+    "    else:\n",
+    "        class_diff = n_class1 - n_class0\n",
+    "    return class_diff\n",
+    "\n",
+    "def resample(train_x,train_y,k=5):\n",
+    "    '''Resample the data to fix class imbalance\n",
+    "        uses nearest neighbors method\n",
+    "        data should be scaled to mean 0 and std 1\n",
+    "        Returns synthetic data needed to balance\n",
+    "    '''\n",
+    "    min_class = minor_class(train_y)\n",
+    "    mc_data = train_x[train_y == min_class]\n",
+    "    cdiff = class_diff(train_y)\n",
+    "    \n",
+    "    nearest_neighbors = NearestNeighbors()\n",
+    "    nearest_neighbors.fit(mc_data)\n",
+    "    \n",
+    "    idxs = np.random.choice(np.arange(0,len(mc_data)),cdiff,replace=True)\n",
+    "    \n",
+    "    data_points = mc_data[idxs]\n",
+    "    dist,nni = nearest_neighbors.kneighbors(data_points,k)\n",
+    "    pivot_points = mc_data[nni[:,np.random.randint(0,k)]]\n",
+    "    scale = np.random.random(cdiff)\n",
+    "    synthetic_data = data_points + scale*pivot_points\n",
+    "\n",
+    "    return synthetic_data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Adaboost Random Forest"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 : 0.0394797421731\n",
+      "10 : 0.0394797421731\n",
+      "100 : 0.0393975269666\n",
+      "1000 : 0.0403512233623\n"
+     ]
+    }
+   ],
    "source": [
     "estimators_range = np.logspace(0,3,4,dtype=int)\n",
     "args = {'base_estimator':RandomForestClassifier(n_estimators=100,max_depth=1)}\n",
@@ -109,29 +188,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.039479742173112342"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.mean(Y_train)"
+    "depth_range = np.arange(1,11)\n",
+    "args = {'base_estimator':RandomForestClassifier(n_estimators=100,max_depth=1)}\n",
+    "best_n_estimators, n_estimators_errors = cross_validation(AdaBoostClassifier,\n",
+    "                                                         X_train,Y_train,\n",
+    "                                                         estimators_range,\n",
+    "                                                         parameter='n_estimators',\n",
+    "                                                         k=3,\n",
+    "                                                         silence=False,\n",
+    "                                                         **args)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 54,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "operands could not be broadcast together with shapes (70004,) (70004,369) ",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-54-25d4a6f232a7>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mresample\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_x\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mtrain_y\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-53-0a43982be625>\u001b[0m in \u001b[0;36mresample\u001b[0;34m(train_x, train_y, k)\u001b[0m\n\u001b[1;32m     65\u001b[0m     \u001b[0mpivot_points\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmc_data\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mnni\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mk\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     66\u001b[0m     \u001b[0mscale\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrandom\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcdiff\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 67\u001b[0;31m     \u001b[0msynthetic_data\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdata_points\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mscale\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0mpivot_points\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     68\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     69\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0msynthetic_data\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: operands could not be broadcast together with shapes (70004,) (70004,369) "
+     ]
+    }
+   ],
+   "source": [
+    "resample(train_x,train_y,k=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -139,16 +239,36 @@
     {
      "data": {
       "text/plain": [
-       "0.039923704288345171"
+       "array([[   0, 2878, 1675, 1504, 1819,  189, 1223, 2839,  344, 1940]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "73012\n",
+      "3008\n"
+     ]
+    }
+   ],
    "source": [
-    "np.mean(Y_valid)"
+    "nearest_neighbors = NearestNeighbors()\n",
+    "nearest_neighbors.fit(class1)\n",
+    "nearest_neighbors.kneighbors(class1[np.random.randint(0,len(class1),len(class1))])"
    ]
   },
   {
