resample not working

--- a/Santander/adaboost.ipynb
+++ b/Santander/adaboost.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -35,11 +35,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/mayen/anaconda/lib/python2.7/site-packages/sklearn/preprocessing/data.py:153: UserWarning: Numerical issues were encountered when centering the data and might not be solved. Dataset may contain too large values. You may need to prescale your features.\n",
+      "  warnings.warn(\"Numerical issues were encountered \"\n"
+     ]
+    }
+   ],
    "source": [
     "train = train_raw.drop(['ID','TARGET'],axis=1)\n",
     "#train_x = train_x.reindex(np.random.permutation(train_x.index))\n",
@@ -49,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -61,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -72,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -143,6 +152,8 @@
     "    data_points = mc_data[idxs]\n",
     "    dist,nni = nearest_neighbors.kneighbors(data_points,k)\n",
     "    pivot_points = mc_data[nni[:,np.random.randint(0,k)]]\n",
+    "    print 'pp',pivot_points.shape\n",
+    "    print 'dp',data_points.shape\n",
     "    scale = np.random.random(cdiff)\n",
     "    synthetic_data = data_points + scale*pivot_points\n",
     "\n",
@@ -154,6 +165,50 @@
    "metadata": {},
    "source": [
     "# Adaboost Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(76020, 369)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_x.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "synthetic_data = resample(train_x,train_y,k=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "syn_train_x = np.vstack((train_x,synthetic_data)) "
    ]
   },
   {
@@ -225,9 +280,7 @@
      ]
     }
    ],
-   "source": [
-    "resample(train_x,train_y,k=5)"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
