--- a/Santander/sol_randomforest.ipynb
+++ b/Santander/sol_randomforest.ipynb
@@ -13,6 +13,7 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.cross_validation import train_test_split\n",
     "from sklearn.cross_validation import KFold\n",
+    "from sklearn import preprocessing\n",
     "import matplotlib.pyplot as plt\n",
     "plt.style.use('bmh')\n",
     "%matplotlib inline"
@@ -360,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -376,6 +377,8 @@
    ],
    "source": [
     "train_x = train_raw.drop(['TARGET'],axis=1)\n",
+    "train_x = train_x.reindex(np.random.permutation(train_x.index))\n",
+    "train_x = preprocessing.scale(train_x)\n",
     "train_y = train_raw['TARGET'].values\n",
     "print train_x.shape\n",
     "print train_y.shape"
@@ -383,19 +386,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "X_train, X_valid, Y_train, Y_valid = train_test_split(train_x, train_y, test_size=0.5, \n",
-    "                                                      random_state=42)"
+    "X_train, X_valid, Y_train, Y_valid = train_test_split(train_x, train_y, test_size=0.2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -406,35 +408,35 @@
        "RandomForestClassifier(bootstrap=True, class_weight=None, criterion='gini',\n",
        "            max_depth=None, max_features='auto', max_leaf_nodes=None,\n",
        "            min_samples_leaf=1, min_samples_split=2,\n",
-       "            min_weight_fraction_leaf=0.0, n_estimators=500, n_jobs=1,\n",
+       "            min_weight_fraction_leaf=0.0, n_estimators=1000, n_jobs=1,\n",
        "            oob_score=False, random_state=None, verbose=0,\n",
        "            warm_start=False)"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "clf = RandomForestClassifier(n_estimators=500)\n",
-    "clf.fit(X_train[['var3','imp_ent_var16_ult1']],Y_train)"
+    "clf = RandomForestClassifier(n_estimators=1000)\n",
+    "clf.fit(X_train,Y_train)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "predictions = clf.predict(X_valid[['var3','imp_ent_var16_ult1']])"
+    "predictions = clf.predict(X_valid)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -443,8 +445,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "25\n",
-      "1481\n"
+      "13\n",
+      "607\n"
      ]
     }
    ],
@@ -455,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false
    },
@@ -464,7 +466,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.0395685345962\n"
+      "0.0407787424362\n"
      ]
     }
    ],
