--- a/Titanic/sol_random_forest.ipynb
+++ b/Titanic/sol_random_forest.ipynb
@@ -604,24 +604,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 103,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def cross_validation(train_x,train_y,p_range,k=50,parameter='n_estimators',silence=True,**kwargs):\n",
-    "    X_train, X_valid, Y_train, Y_valid = train_test_split(train_x, train_y, test_size=0.15, random_state=0)\n",
     "    errors = []\n",
     "    for p in p_range:\n",
-    "        kfold = KFold(len(X_train), n_folds=k,shuffle=True,random_state=0)\n",
+    "        kfold = KFold(len(X_train), n_folds=k,shuffle=True)\n",
     "        error = 0\n",
     "        params = dict({parameter:p},**kwargs)\n",
     "        for train_index, val_index in kfold:\n",
-    "            x_train = X_train.iloc[train_index]\n",
-    "            y_train = Y_train[train_index]\n",
-    "            x_val = X_train.iloc[val_index]\n",
-    "            y_val = Y_train[val_index]\n",
+    "            x_train = train_x.iloc[train_index]\n",
+    "            y_train = train_y[train_index]\n",
+    "            x_val = train_x.iloc[val_index]\n",
+    "            y_val = train_y[val_index]\n",
     "            clf = RandomForestClassifier(**params)\n",
     "            clf.fit(x_train,y_train)\n",
     "            predictions = clf.predict(x_val)\n",
@@ -636,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 104,
    "metadata": {
     "collapsed": false
    },
@@ -658,7 +657,7 @@
     "            lower = np.logspace(0.5*np.log10(val),np.log10(val),3,dtype=int)\n",
     "            if lower[0] <= 0:\n",
     "                lower[0] = 1\n",
-    "            upper = np.logspace(np.log10(val),2*np.log10(val),3,dtype=int)\n",
+    "            upper = np.logspace(np.log10(val),np.log10(val)+1,3,dtype=int)\n",
     "            param_range = np.unique(np.concatenate((lower,upper)))\n",
     "            print param,':',val\n",
     "            best_p,errors = cross_validation(train_x,train_y,param_range,parameter=param,**p_dict)\n",
@@ -670,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {
     "collapsed": false
    },
@@ -679,39 +678,79 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 : {'n_estimators': 100, 'min_samples_split': 8, 'max_depth': 10}\n",
-      "n_estimators : 100\n",
-      "10 : 0.169166666667\n",
-      "31 : 0.17425\n",
-      "100 : 0.165166666667\n",
-      "316 : 0.163916666667\n",
-      "1000 : 0.16525\n",
+      "0 : {'n_estimators': 100, 'min_samples_split': 100, 'max_depth': 10}\n",
       "max_depth : 10\n",
-      "3 : 0.188833333333\n",
-      "5 : 0.175583333333\n",
+      "3 : 0.207416666667\n",
+      "5 : 0.188833333333\n",
+      "10 : 0.186166666667\n",
+      "100 : 0.184833333333\n",
+      "1000 : 0.18875\n",
+      "n_estimators : 100\n",
+      "10 : 0.184583333333\n",
+      "31 : 0.18875\n",
+      "100 : 0.183416666667\n",
+      "1000 : 0.184833333333\n",
+      "10000 : 0.1835\n",
+      "min_samples_split : 100\n",
+      "10 : 0.166416666667\n",
+      "31 : 0.170416666667\n",
+      "100 : 0.1835\n",
+      "1000 : 0.379\n",
+      "10000 : 0.379\n",
+      "1 : {'n_estimators': 100, 'min_samples_split': 10, 'max_depth': 100}\n",
+      "min_samples_split : 10\n",
+      "3 : 0.17175\n",
+      "5 : 0.171833333333\n",
+      "10 : 0.17175\n",
+      "100 : 0.1875\n",
+      "1000 : 0.379\n",
+      "n_estimators : 100\n",
+      "10 : 0.183583333333\n",
+      "31 : 0.181\n",
+      "100 : 0.170416666667\n",
+      "1000 : 0.170416666667\n",
+      "10000 : 0.171666666667\n",
+      "max_depth : 100\n",
+      "10 : 0.167916666667\n",
+      "31 : 0.175666666667\n",
+      "100 : 0.173\n",
+      "1000 : 0.169083333333\n",
+      "10000 : 0.17175\n",
+      "2 : {'n_estimators': 1000, 'min_samples_split': 10, 'max_depth': 10}\n",
+      "n_estimators : 1000\n",
+      "31 : 0.171666666667\n",
+      "177 : 0.1665\n",
+      "1000 : 0.1665\n",
+      "10000 : 0.1665\n",
+      "100000 : 0.166583333333\n",
+      "max_depth : 10\n",
+      "3 : 0.192916666667\n",
+      "5 : 0.173\n",
       "10 : 0.169083333333\n",
-      "17 : 0.173083333333\n",
-      "31 : 0.173083333333\n",
-      "min_samples_split : 8\n",
-      "2 : 0.165083333333\n",
-      "4 : 0.170416666667\n",
-      "7 : 0.16525\n",
-      "13 : 0.165166666667\n",
-      "22 : 0.177166666667\n",
-      "1 : {'n_estimators': 316, 'min_samples_split': 2, 'max_depth': 10}\n",
-      "min_samples_split : 2\n",
-      "1 : 0.169083333333\n",
-      "2 : 0.165166666667\n",
-      "n_estimators : 316\n",
-      "17 : 0.178166666667\n",
-      "74 : 0.162583333333\n",
-      "316 : 0.166333333333\n",
-      "1332"
+      "100 : 0.175666666667\n",
+      "1000 : 0.174333333333\n",
+      "min_samples_split : 10\n",
+      "3 : 0.169166666667\n",
+      "5 : 0.167916666667\n",
+      "10 : 0.1665\n",
+      "100 : 0.1835\n",
+      "1000 : 0.379\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(array(['n_estimators', 'min_samples_split', 'max_depth'], \n",
+       "       dtype='|S17'), array([1000,   10,   10]))"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "p_dict = {'n_estimators':100,'max_depth':10,'min_samples_split':8}\n",
+    "p_dict = {'n_estimators':100,'max_depth':10,'min_samples_split':100}\n",
     "parameter_search(train_x,train_y,p_dict,k=10,max_cycles=3,step=1.)"
    ]
   },
